updating dependencies, use java 19, use virtual threads preview